deployments/sprint-3/ipost/gateway.yml
apiVersion: v1
kind: Service
metadata:
  name: gateway-svc
  labels:
    run: gateway-svc
spec:
  ports:
  - port: 8123
    protocol: TCP
  selector:
    run: gateway
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
spec:
  selector:
    matchLabels:
      run: gateway
  replicas: 1
  template:
    metadata:
      labels:
        run: gateway
    spec:
      containers:
      - name: gateway
        image: fipost/api-gateway:0.0.6.5
        ports:
        - containerPort: 8123
      - name: liveness
        image: k8s.gcr.io/liveness
        args:
          - /server
        livenessProbe:
          httpGet:
            path: /api/health
            port: 8123
            httpHeaders:
            - name: Custom-Header
              value: Awesome
          initialDelaySeconds: 15
          periodSeconds: 15
