deployments/sprint-3/ipost/location.yml
apiVersion: v1
kind: Service
metadata:
  name: locationservice-svc
  labels:
    run: locationservice-svc
spec:
  ports:
  - port: 5002
    protocol: TCP
  selector:
    run: locationservice
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: locationservice
spec:
  selector:
    matchLabels:
      run: locationservice
  replicas: 1
  template:
    metadata:
      labels:
        run: locationservice
    spec:
      containers:
      - name: locationservice
        image: fipost/location-service:0.0.6.2
        ports:
        - containerPort: 5002
      - name: liveness
        image: k8s.gcr.io/liveness
        args:
          - /server
        livenessProbe:
          httpGet:
            path: api/city/health
            port: 5002
            httpHeaders:
            - name: Custom-Header
              value: Awesome
          initialDelaySeconds: 15
          periodSeconds: 15
