deployments/sprint-3/ipost/pakket.yml
apiVersion: v1
kind: Service
metadata:
  name: pakketservice-svc
  labels:
    run: pakketservice-svc
spec:
  ports:
  - port: 5001
    protocol: TCP
  selector:
    run: pakketservice
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pakketservice
spec:
  selector:
    matchLabels:
      run: pakketservice
  replicas: 1
  template:
    metadata:
      labels:
        run: pakketservice
    spec:
      containers:
      - name: pakketservice
        image: fipost/pakketservice:0.0.6.2
        ports:
        - containerPort: 5001
      - name: liveness
        image: k8s.gcr.io/liveness
        args:
          - /server
        livenessProbe:
          httpGet:
            path: /api/packages/health
            port: 5001
            httpHeaders:
            - name: Custom-Header
              value: Awesome
          initialDelaySeconds: 15
          periodSeconds: 15
