deployments/sprint-3/ipost/ingress_local.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
  annotations:
spec:
  rules:
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: ui-svc
            port:
              number: 80
      - pathType: Prefix
        path: "/gateway"
        backend:
          service:
            name: gateway-svc
            port:
              number: 8123
      - pathType: Prefix
        path: "/locations"
        backend:
          service:
            name: locationservice-svc
            port:
              number: 5002
      - pathType: Prefix
        path: "/packages"
        backend:
          service:
            name: pakketservice-svc
            port:
              number: 5001
      - pathType: Prefix
        path: "/employees"
        backend:
          service:
            name: employee-svc
            port:
              number: 5003
